# st-andrews

./: README.md
CS1003/Exercises/W02/W02-1-IO/: IOReader.java  W02_1_IO.java
CS1003/Exercises/W02/W02-2-Exceptions/: EmptyFileException.java  IOReader.java  W02_2_Exceptions.java
CS1003/Exercises/W05/W05-1-SQLite-Tutorial/: .project  W05Exercise1.db
CS1003/Exercises/W05/W05-2-SQLite-Modelling/: W05Exercise2.db
CS1003/Exercises/W06/W06-1-JDBC/: W06Exercise01.java
CS1003/Exercises/W06/W06-2-ORM/: Album.java  Artist.java  Database.java  Initialise.java  RetrieveAlbum.java  RetrieveAllAlbums.java  RetrieveAllArtists.java  RetrieveArtist.java  StoreAlbum.java  StoreArtist.java  UpdateAlbum.java  UpdateArtist.java
CS1003/Exercises/W08/data/: notes.txt  pp-2020-short.csv
CS1003/Exercises/W08/src/: W08Exercise.java
CS1003/Exercises/W09/src/: W09Exercise.java
CS1003/Exercises/W10/: ISimpleCanvas.java  Loader.java  SimpleCanvas.java  Test.java
CS1003/Practicals/P1/src/: CS1003P1.java  CS1003P1_Ex.java
CS1003/Practicals/P2/src/: CS1003P2.java  OMDbAPI.java
CS1003/Practicals/P3/src/: Award.java  Database.java  InitialiseDB.java  Movie.java  MovieAward.java  MoviePerson.java  MoviePersonAward.java  Person.java  PopulateDB.java  QueryDB.java  Review.java  overview-summary.java  package-info.java
CS1003/Practicals/P4/javadoc/: CS1003P4.html  allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  package-summary.html  package-tree.html  type-search-index.js
CS1003/Practicals/P4/src/: CS1003P4.java
CS1003/Tutorials/W02/: W02_T01.java  WordReader.java  words.txt
CS1003/Tutorials/W05/: W05Tutorial.java
CS1003/Tutorials/W06/: Q02-ERDiagram.drawio  Q05.db
CS1003/Tutorials/W07/: W07Tutorial.java
CS1003/Tutorials/W07/data/: W07Tutorial.db
CS2001/Practicals/W01-Exercise/javadoc/: DictionaryLoader.html  ISpellChecker.html  SpellCheckResult.html  SpellChecker.html  allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  (+7 more)
CS2001/Practicals/W05-JUnit/: .project
CS2001/Practicals/W10-Complexity/: DataWriter.sh
CS2002/exam/: q4a.c  q4b.c
CS2002/practicals/W11-SP/: FAQ.txt
CS2002/tutorials/W06/: pointersAndGenerics.c
CS2002/tutorials/W10/: thread_opts.c
CS3099/project-code/: .env.example  .gitignore  README.md  ecosystem.config.js  package-lock.json  package.json
CS3099/project-code/backend/: package-lock.json  package.json  privateKey.pem  publicKey.pem
CS3099/project-code/frontend/: index.html  package-lock.json  package.json  vite.config.js
CS3101/Exam/: answers.tex
CS3104/exercises/W1/: W1-Exercises.c
CS4102/P1/: .gitignore  Makefile  main.py  out.json  params.json
CS4102/P2/: Makefile
CS4102/P2/src/: getNormals.js  p1.html  p2.html  p3.html
CS4102/W02Lab/: Lab1-starter-2D.html  Lab1-starter-blank.html
CS4201/Coursework/P1-lambdacalc/: .gitignore
CS4201/Coursework/P1-lambdacalc/lambdacalc/: README.md  lc.cabal  prelude.st
CS4201/Coursework/P1-lambdacalc/lambdacalc/src/: Common.hs  REPL.hs
CS4201/Coursework/P1-lambdacalc/lambdacalc/src/Lambda/: AST.hs  Check.hs  Eval.hs  Main.hs  Parser.hs  Printer.hs  Quote.hs
CS4201/Coursework/P1-lambdacalc/lambdacalc/test/: CheckSpec.hs  EvalSpec.hs  QuoteSpec.hs
CS4201/Coursework/P2-IR/: .gitignore
CS4201/Coursework/P2-IR/ir/: README.md  ir.cabal
CS4201/Coursework/P2-IR/ir/src/: Reference.java  Test.java
CS4201/Coursework/P2-IR/ir/src/IR/: ANF.hs  Defun.hs
CS4201/Coursework/P2-IR/ir/test/: ANFSpec.hs  DefunSpec.hs
CS4201/Haskell/: Testing.hs
CS4202/P1-CacheSim/: .gitignore  CMakeLists.txt  README.md  design.md  main.cpp
CS4202/P1-CacheSim/CacheSim/: CMakeLists.txt  cache.cpp  cache.hpp  cacheParser.cpp  cacheParser.hpp  cacheSim.cpp  cacheSim.hpp  lfuCache.cpp  lfuCache.hpp  lruCache.cpp  lruCache.hpp  rrCache.cpp  rrCache.hpp
CS4202/P1-CacheSim/data/sample-inputs/: empty.json  massive.json
CS4202/P2-BranchPredictor/: .gitignore  CMakeLists.txt  README.md  output.csv  output.ods
CS4202/P2-BranchPredictor/src/: CMakeLists.txt  main.cpp
CS4202/P2-BranchPredictor/src/BranchPredictor/: AlwaysTruePredictor.cpp  AlwaysTruePredictor.hpp  CMakeLists.txt  GSharePredictor.cpp  GSharePredictor.hpp  Predictor.cpp  Predictor.hpp  Simulator.cpp  Simulator.hpp  Trace.hpp  TraceReader.cpp  TraceReader.hpp  TwoBitPredictor.cpp  TwoBitPredictor.hpp
CS4202/P2-BranchPredictor/test/: CMakeLists.txt  eval.cpp  test.cpp
CS4202/P2-BranchPredictor/test/BranchPredictor/: TestTraceReader.cpp
CS4204/P1/: .gitignore  CMakeLists.txt  README.md
CS4204/P1/src/Atomic/: CMSet.cpp  CMSet.hpp
CS4204/P1/src/LockFree/: CMSet.cpp  CMSet.hpp
CS4204/P1/src/MultiLock/: CMSet.cpp  CMSet.hpp
CS4204/P1/src/SingleLock/: CMSet.cpp  CMSet.hpp
CS4204/P1/test/: CMakeLists.txt  tests.cpp
CS4204/P2/: .gitignore  CMakeLists.txt  README.md  doxygen.conf
CS4204/P2/examples/: CMakeLists.txt  convolution.cpp  convolution_fastFlow_farm.cpp  convolution_parapat_farm.cpp  convolution_parapat_nest.cpp  convolution_parapat_pipe.cpp  convolution_parapat_stream.cpp  fib.cpp  fib_parapat_pipe.cpp
CS4204/P2/examples/images/: .gitignore
CS4204/P2/scripts/: eval_conv_examples.sh  eval_conv_range.sh
CS4204/P2/src/: CMakeLists.txt
CS4204/P2/src/para-pat/: Farm.cpp  Farm.hpp  Node.cpp  Node.hpp  ParaQueue.cpp  ParaQueue.hpp  Pipe.cpp  Pipe.hpp  Worker.cpp  Worker.hpp
CS4204/P2/test/: functions.cpp  functions.hpp  tests.cpp
CS4204/P2/test/para-pat/: testFarm.cpp  testParaQueue.cpp  testPipe.cpp  testWorker.cpp
CS4302/Coursework/: q1.m  q1.mlx  q2-hsv.mlx
CS4402/Coursework/P1/: Makefile  evaluator.sh  model.eprime
CS4402/Coursework/P2/: .gitignore  Makefile  README.md  evaluation.sh  generator.sh  pom.xml
CS5014/P1/: .gitignore  Makefile  main.ipynb  requirements.txt
CS5014/P2/: .gitignore  CS5014_P2.ipynb  requirements.txt
CS5014/P2/datasets/: newsdata.npz  newsdata_labels.csv  newsdata_terms.csv
(+304 files in other folders)
