cabal-version: 3.0
name: lc
version: 0.1
build-type: Simple
maintainer: Chris Brown
description: ST Lambda Calculus

executable st

    main-is:
        Lambda/Main.hs
    buildable:
        True
    build-depends:
        base >=4.9.1.0,
        pretty >=1.1.3.5,
        mtl >=2.2.1,
        parsec >=3.1.11,
        lc
    other-modules:
      Common
      REPL
      Lambda.AST
      Lambda.Check
      Lambda.Eval
      Lambda.Parser
      Lambda.Printer
      Lambda.Quote
    hs-source-dirs:
        src
    ghc-options: -main-is Lambda.Main
    default-language: Haskell2010

library
    exposed-modules:
        Common
        REPL
        Lambda.AST
        Lambda.Check
        Lambda.Eval
        Lambda.Parser
        Lambda.Printer
        Lambda.Quote
    build-depends:
        base >=4.9.1.0,
        mtl >=2.2.1,
        parsec >=3.1.11,
        pretty >=1.1.3.5
    hs-source-dirs: 
        src
    default-language: Haskell2010

test-suite spec
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test/
  main-is:
    Spec.hs
  ghc-options: -Wall -threaded
  cpp-options: -DTEST
  build-depends:
      base >= 4 && < 5
    , hspec >= 2.11.5
    , QuickCheck >= 2.12
    , mtl
    , lc
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    EvalSpec
    QuoteSpec
    CheckSpec