cabal-version: 3.0
name: ir
version: 0.1
build-type: Simple
maintainer: 200007413
description: IR Compiler

executable ir
    main-is:
        IR/ANF.hs
    buildable:
        True
    build-depends:
        base >=4.9.1.0,
        pretty >=1.1.3.5,
        mtl >=2.2.1,
        parsec >=3.1.11,
        ir
    other-modules:
      IR.Defun
    hs-source-dirs:
        src
    ghc-options: -main-is IR.ANF
    default-language: Haskell2010

library
    exposed-modules:
        IR.Defun
        IR.ANF

    build-depends:
        base >=4.9.1.0,
        mtl >=2.2.1,
        parsec >=3.1.11,
        pretty >=1.1.3.5
    hs-source-dirs: 
        src
    default-language: Haskell2010

test-suite spec
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test/
  main-is:
    Spec.hs
  ghc-options: -Wall -threaded
  cpp-options: -DTEST
  build-depends:
      base >= 4 && < 5
    , hspec >= 2.11.5
    , QuickCheck >= 2.12
    , mtl
    , ir
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    DefunSpec,
    ANFSpec
